# zAppIt

./: .env.backup  .gitignore  README.md  app.json  env-setup.txt  package-lock.json  package.json  tsconfig.json
app/: _layout.tsx  index.tsx
circuits/: Nargo.toml  Prover.toml
components/: NFCGifScreen.tsx  UseNfcReader.tsx  UseSimpleHCE.tsx  WalletBalance.tsx
constants/: config.ts
contexts/: WalletContext.tsx
contracts/: PrivateCircle.sol
mopro-bindings/: Cargo.toml  Config.toml
mopro-bindings/MoproiOSBindings/MoproBindings.xcframework/ios-arm64/Headers/mopro_bindings/: module.modulemap  mopro_bindingsFFI.h
mopro-bindings/android/app/src/main/java/uniffi/mopro/: mopro.kt
mopro-bindings/react-native/: .gitignore  package-lock.json  package.json
mopro-bindings/react-native/android/: build.gradle  settings.gradle
mopro-bindings/react-native/android/app/: build.gradle
mopro-bindings/react-native/android/app/src/androidTest/java/com/anonymous/reactnativeapp/: DetoxTest.java
mopro-bindings/react-native/android/app/src/main/: AndroidManifest.xml
mopro-bindings/react-native/android/app/src/main/java/com/anonymous/reactnativeapp/: MainActivity.kt  MainApplication.kt
mopro-bindings/react-native/app/(tabs)/: index.tsx
mopro-bindings/react-native/modules/mopro/: index.ts
mopro-bindings/react-native/modules/mopro/android/src/main/java/expo/modules/mopro/: MoproModule.kt
mopro-bindings/react-native/modules/mopro/ios/MoproiOSBindings/: mopro.swift
mopro-bindings/src/: lib.rs
mopro-bindings/test-vectors/noir/: anon_circle.json  anon_circle.srs
(+81 files in other folders)
