
[package]
name = "mopro-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["noir"]
noir = []

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
rust-witness = "0.1"
uniffi = { version = "=0.29.0" }
num-bigint = "0.4.0"
thiserror = "2.0.12"
# HALO2_DEPENDENCIES

# NOIR_DEPENDENCIES
noir = { git = "https://github.com/zkmopro/noir-rs", features = ["barretenberg", "srs-downloader"] }

[build-dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
rust-witness = "0.1"
uniffi = { version = "=0.29.0", features = ["build"] }

# CIRCOM_DEPENDENCIES
    